unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Created__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Created__c</fullName>
    <description>Stripe timestamp of the event.</description>
    <inlineHelpText>Stripe timestamp of the event.</inlineHelpText>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>