unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Event_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Event_ID__c</fullName>
    <description>Stripe ID of the Event.</description>
    <inlineHelpText>Stripe ID of the Event.</inlineHelpText>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>