unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Index__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Index__c</fullName>
    <description>Time in milliseconds of the Webhook event datetime. Gives the most accurate precision of processing order.</description>
    <inlineHelpText>Time in milliseconds of the Webhook event datetime. Gives the most accurate precision of processing order.</inlineHelpText>
    <label>Index</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>