unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Gateway related to this webhook event.</description>
    <inlineHelpText>The Payment Gateway related to this webhook event.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Webhook Events</relationshipLabel>
    <relationshipName>Webhook_Events</relationshipName>
    <type>Lookup</type>
</CustomField>