unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Process_Async__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Process_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the webhook event will be excluded from webhook processing batches and can instead be processed via the global asynchronous method. (WebhookService.proessEventStripeAsync())</description>
    <inlineHelpText>When checked, the webhook event will be excluded from webhook processing batches and can instead be processed via the global asynchronous method.</inlineHelpText>
    <label>Process Async</label>
    <type>Checkbox</type>
</CustomField>