unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Processed__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the event has been processed by the scheduled Webhook Service job.</description>
    <inlineHelpText>Indicates if the event has been processed by the scheduled Webhook Service job.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>