unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Processing_Error__c</fullName>
    <inlineHelpText>If this Webhook Event encountered an error while being parsed or processed, the error is saved here and a Blackthorn Log record is created with more detail.</inlineHelpText>
    <label>Processing Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>