unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Request__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Request__c</fullName>
    <description>ID of the Stripe request to the webhook.</description>
    <inlineHelpText>ID of the Stripe request to the webhook.</inlineHelpText>
    <label>Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>