unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Webhook Events</relationshipLabel>
    <relationshipName>Webhook_Events</relationshipName>
    <type>Lookup</type>
</CustomField>