unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Subscription__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>bt_stripe__Subscription2__c</referenceTo>
    <relationshipLabel>Webhook Events</relationshipLabel>
    <relationshipName>Webhook_Events</relationshipName>
    <type>Lookup</type>
</CustomField>