unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Try__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Try__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of failed attempts to process this record.</description>
    <inlineHelpText>This field is incremented only on failures to process.</inlineHelpText>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>