unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>Type of the event.</description>
    <inlineHelpText>Type of the event.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>