unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Type__c</columns>
    <columns>bt_stripe__Payment_Gateway__c</columns>
    <columns>bt_stripe__Created__c</columns>
    <columns>bt_stripe__Processed__c</columns>
    <columns>bt_stripe__Process_Order__c</columns>
    <columns>bt_stripe__Processing_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>