unpackaged/main/default/objects/bt_stripe__Webhook_Event__c/listViews/bt_stripe__Non_processed.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Non_processed</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Created__c</columns>
    <columns>bt_stripe__Request__c</columns>
    <columns>bt_stripe__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Processed__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Non-processed</label>
</ListView>